manifests/bootstrapping/envoy-gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: envoy-gateway
  name: envoy-gateway
